Suddenly a lot faster.

--- a/IntelTestBedLib2/IntelTestBedLib2.vcxproj
+++ b/IntelTestBedLib2/IntelTestBedLib2.vcxproj
@@ -126,7 +126,7 @@
       <InterproceduralOptimization>SingleFile</InterproceduralOptimization>
       <UseIntelOptimizedHeaders>false</UseIntelOptimizedHeaders>
       <UseProcessorExtensions>None</UseProcessorExtensions>
-      <GPUArch>Haswell</GPUArch>
+      <GPUArch>Default</GPUArch>
       <OffloadOpenMPTarget>GFXTarget</OffloadOpenMPTarget>
     </ClCompile>
     <Link>
